--- a/Erp8/DandR/Anasayfa.html
+++ b/Erp8/DandR/Anasayfa.html
@@ -10,11 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="Anasayfa.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+
 </head>
 <body>
 
     <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-1 mb-3 border-bottom">
             <!--<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap" /></svg>
             </a>-->
@@ -22,7 +24,7 @@
 
             </div>-->
             <div class="col-md-1">
-                <i> 503</i>
+
             </div>
             <ul class="nav col-7 col-md-auto mb-2 justify-content-center mb-md-0"
                 style="font-size:12px;font-weight:bold">
@@ -49,7 +51,7 @@
 
         </header>
 
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
             <!--<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap" /></svg>
             </a>-->
@@ -57,7 +59,7 @@
 
             </div>-->
             <div class="col-md-1">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+                <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
                     <img src="https://www.dr.com.tr/Themes/DR/Content/NewTheme/assets/dist/images/frontend/logo.svg" alt="logo" width="84" height="64" />
                 </a>
             </div>
@@ -89,7 +91,7 @@
                     Giriş Yap
                 </a>
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                    <li><a class="dropdown-item" href="#">GİRİŞ YAP.</a></li>
+                    <li><a class="dropdown-item" href="#">GİRİŞ YAP</a></li>
                     <li><a class="dropdown-item" href="#">KAYIT OL</a></li>
 
                 </ul>
@@ -101,7 +103,311 @@
             </div>
 
         </header>
+
+
+
     </div>
 
+    <div>
+        <nav style="background-color: #084793;"
+             class="navbar navbar-expand-lg py-0 mt-3">
+            <div class="container">
+
+                <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse"
+                     id="navbarSupportedContent">
+                    <ul style="display: flex;justify-content: center;
+           align-items: center;text-align: center;margin:auto;"
+                        class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">KİTAP</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">SINAV KİTAPLARI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">ELEKTRONİK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">ELEKTRİKLİ EV ALETLERİ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">
+                                ANNE BEBEK, <br />
+                                OYUNCAK
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">HOBİ MÜZİK,<br />HEDİYELİK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">ÇOK SATANLAR</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page">|</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                               aria-current="page" href="#">YENİ ÇIKANLAR</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+
+    <div class="container mt-3" id="slidermenu" style="height:350px" ;>
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <a href="#">
+                        <img src="https://i.dr.com.tr/pimages/Content/Uploads/BannerFiles/dr/dr-nisan-kmp-faber-anasayfa_1200x390.jpg" class="d-block w-100" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <a href="#">
+                        <img src="https://i.dr.com.tr/pimages/Content/Uploads/BannerFiles/dr/anasayfa_1200x390-2023ramazan.jpg" class="d-block w-100" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <img src="https://i.dr.com.tr/pimages/Content/Uploads/BannerFiles/dr/nisan-ana-kampansydjanasayfa_1200x390.jpg" class="d-block w-100" alt="...">
+                    </a>
+
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden"></span>
+            </button>
+        </div>
+    </div>
+
+    <br />
+    <br />
+    <!--kitaplar-->
+    <div class="container text-center my-3">
+        <h2 class="font-weight-light">Yeni Çıkan Kitaplar</h2>
+        <div class="row mx-auto my-auto">
+            <div id="myCarousel" class="carousel slide w-100" data-ride="carousel">
+                <div class="carousel-inner w-100" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=1">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=2">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=3">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=4">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=5">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=6">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=7">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-lg-2">
+                            <img class="img-fluid" src="http://placehold.it/350x180?text=8">
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev bg-dark w-auto" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only"></span>
+                </a>
+                <a class="carousel-control-next bg-dark w-auto" href="#myCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only"></span>
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+    <br> <br>
+
+    <!--footer-->
+    <div class="container">
+        <footer class="">
+            <div class="row">
+                <div class="col-6 col-md-2 mb-3000">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3000">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3000">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md-2 mb-3000">
+                    <h5>Deneme</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 offset-md-1 mb-3000">
+                    <form>
+                        <h5>Subscribe to our newsletter</h5>
+                        <p>Monthly digest of what's new and exciting from us.</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Email address</label>
+                            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                            <button class="btn btn-primary" type="button">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>Tüm Hakları 2023 Wissen Akademi 503 Sınıfına Aittir.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-twitter" style="font-size:25px"></i></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-instagram" style="font-size:25px"></i></a></li>
+                    <li class="ms-3"><a class="link-dark" href="https://tr-tr.facebook.com/"><i class="bi bi-facebook" style="font-size:25px"></i></a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script>
+        $('#myCarousel').carousel({
+            interval: 10000
+        })
+
+        $('#myCarousel .carousel-item').each(function () {
+            var minPerSlide = 3;
+            var next = $(this).next();
+            if (!next.length) {
+                next = $(this).siblings(':first');
+            }
+            next.children(':first-child').clone().appendTo($(this));
+
+            for (var i = 0; i < minPerSlide; i++) {
+                next = next.next();
+                if (!next.length) {
+                    next = $(this).siblings(':first');
+                }
+
+                next.children(':first-child').clone().appendTo($(this));
+            }
+        });
+
+    </script>
 </body>
 </html>
